dataset1235/2025-2/1153765216/users/260676580/executions/2814675586_3198308593.log
== SUBMISSION (2025-08-26 19:00:10)
-- CODE: 
import math
raio = float(input())
volume = (4/3)*math.pi*raio**3
print(round(volume,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
696.91
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
4.1888
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
137.2583
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
4188.7902
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
7238.2295
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
0.5236
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:00:08)
-- CODE: 
import math
raio = float(input())
volume = (4/3)*math.pi*raio**3
print(round(volume,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
696.91
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
4.1888
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
137.2583
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
4188.7902
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
7238.2295
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
0.5236
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:26:25)
-- CODE: 
r = float(input() )
volume = (4/3) * .pi * r * 3  
print(round(volume,4)
      import math 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:26:30)
-- CODE: 
r = float(input() )
volume = (4/3) * .pi * r * 3  
print(round(volume,4)
      import math 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:30:15)
-- CODE: 
r = float(input())
volume = (4/3) *.pi* r***3
print(f"{round(volume,4)}"

 import math
 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 2
    volume = (4/3) *.pi* r***3
                    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 2
    volume = (4/3) *.pi* r***3
                    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 2
    volume = (4/3) *.pi* r***3
                    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 2
    volume = (4/3) *.pi* r***3
                    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 2
    volume = (4/3) *.pi* r***3
                    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 2
    volume = (4/3) *.pi* r***3
                    ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:26:30)
-- CODE: 
r = float(input() )
volume = (4/3) * .pi * r * 3  
print(round(volume,4)
      import math 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:29:55)
-- CODE: 
 import math  
r = float(input())
volume = (4/3) *.pi* r***3
print(f"{round(volume,4)}"

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 1
    import math  
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 1
    import math  
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 1
    import math  
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 1
    import math  
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 1
    import math  
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 1
    import math  
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:26:24)
-- CODE: 
r = float(input() )
volume = (4/3) * .pi * r * 3  
print(round(volume,4)
      import math 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:26:26)
-- CODE: 
r = float(input() )
volume = (4/3) * .pi * r * 3  
print(round(volume,4)
      import math 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 2
    volume = (4/3) * .pi * r * 3  
                     ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
